# KFData

./: .gitignore  README.md
Runtime/CPP/KFData/: CMakeLists.txt  README.md
Runtime/CPP/KFData/Format/: KFD.cpp  KFD.h  KFDAnyObject.cpp  KFDAnyObject.h  KFDName.cpp  KFDName.h  KFDValue.cpp  KFDValue.h  KFDataFormat.cpp  KFDataFormat.h  KFDataJson.cpp  KFDataJson.h
Runtime/CPP/KFData/Utils/: KFByteArray.cpp  KFByteArray.h  KFDataType.h  KFDefine.cpp  KFDefine.h  KFJson.cpp  KFJson.h  base64.cpp  base64.h  zzzjson.h
Runtime/TypeScript/KFData/Format/: KFD.ts  KFDJson.ts  KFDName.ts  KFDTable.ts
Runtime/TypeScript/KFData/Utils/: FKByteArray.ts
Tool/KFDataTool/: KFDDataView.bat  KFDDataViewDND.bat
Tool/KFDataTool/Py/: CPP.py  CPPAnyExport.py  CPPByteArrayExport.py  CPPDirUtilExport.py  CPPTypeDefExport.py  CodeFile.py  KFD.py  KFDTable.py  KFDataDefine.py  KFDataTool.py  KFDataToolSetting.py  MiniTempLate.py  MiniTempLateTest.py  SCDefine.py  SourceCodeReader.py  SourceCodeWriter.py  __initialdir___  pyKFDValueEditDialog.py  pyKFDValueEditEnum.py  pyKFDValueEditViewObject.py  pyKFDValueEditor.py  pyKFDataView.py  pyKFDataViewMain.pyw
Tool/KFDataTool/Py/Cheetah/: Compiler.py  ErrorCatchers.py  NameMapper.py
Tool/KFDataTool/Py/embed/: KFDataToolExportinfo.json  KFDataToolFileStr.json  KFDataToolImportCodeInfo.json  KFDataToolIncludeInfo.json  KFDataToolSetting.json  KFDataToolValueInfo.json  KFImportGroup.json
Tool/KFDataTool/Py/pyKFD/: pyKFByteArray.py  pyKFDJson.py  pyKFDTable.py  (+4 more)
Tool/KFDataTool/Sample/: Run.bat  Setting.json  TestRun.bat  TestSetting.json
(+18 files in other folders)
